# atmanaut

./: .gitignore  README.md  TODO.md  components.json  errors.md  jsconfig.json  middleware.js  next.config.mjs  package-lock.json  package.json  start-dev.sh  switch-mode.sh  tailwind.config.js
.github/workflows/: generate_embeddings.yml
app/: globals.css  layout.js  layout.testing.js  page.js
backend/: middleware.js
backend-python/: README.md  pyproject.toml  run.py
backend-python/app/: __init__.py  main.py
backend-python/app/core/: config.py  database.py
backend-python/app/middleware/: __init__.py  auth.py  rate_limit.py
backend-python/app/models/: __init__.py  models.py
backend-python/app/routers/: __init__.py  analytics.py  collections.py  journal.py  public.py  search.py
backend-python/app/schemas/: __init__.py  schemas.py
backend-python/app/services/: __init__.py  embedding_service.py  external_api_service.py  mood_service.py  semantic_search_service.py  supabase_service.py  user_service.py
backend-python/scripts/: generate_embeddings.py
backend-python/tests/: test_main.py
backend/actions/: analytics.js  collection.js  journal.js
components/: collection-form.jsx  confetti-animation.jsx  entry-card.jsx  floating-particles.jsx  future-entry-modal.jsx  header.jsx  testimonial-carousel.jsx  zen-breathing-guide.jsx  zen-meditation-circle.jsx
components/ui/: accordion.jsx  alert-dialog.jsx  badge.jsx  button.jsx  calendar.jsx  (+9 more)
frontend/: jsconfig.json
hooks/: use-future-entries.js
lib/: api-client.js
shared/: moods.js  schemas.js
(+12 files in other folders)
